fix floating-point bugs